# gevent_requests

./: .gitignore  .travis.yml  AUTHORS.rst  README.md  README.rst  gevent_requests.py  publish.sh  pyproject.toml  requirements.txt  requirements_test.txt  setup.cfg  setup.py  tests.py
.github/workflows/: python-package.yml
